# MyPaint

./: Triangle.h
MyPaint/: .gitignore  CMakeLists.txt  IFigure.h  Triangle.h  commands.cpp  commands.h  ellipse.cpp  ellipse.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
MyPaint/SourceFiles/: TODO.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shape_editor_widget.cpp  shape_editor_widget.h  stdafx.h
MyPaint/SourceFiles/shapes/: IFigure.h  IShape.h  ellipse.cpp  ellipse.h  figure_factory.cpp  figure_factory.h  rectangle.cpp  rectangle.h  triangle.cpp  triangle.h
MyPaint/SourceFiles/utils/: commands.cpp  commands.h  file_manager.cpp  file_manager.h
